# pokedex-mongo

./: README.md  docker-compose.yml  start-project.ps1  start-project.sh
pokedex-fe/: .gitignore  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
pokedex-fe/app/: globals.css  layout.tsx  page.tsx
pokedex-fe/app/pokemon/[number]/: page.tsx
pokedex-fe/components/: PokedexClient.tsx  PokemonCard.tsx  PokemonDetailsModal.tsx
pokedex-fe/lib/: api.ts
pokedex_be/: .env.example  README.md  pyproject.toml  requirements.txt
pokedex_be/app/: main.py
pokedex_be/app/api/: admin.py  pokemon.py
pokedex_be/app/core/: config.py
pokedex_be/app/db/: mongo.py
pokedex_be/app/models/: pokemon.py
pokedex_be/app/schemas/: pokemon.py
pokedex_be/app/services/: pokeapi.py  pokeapi_details.py  pokemon_service.py
pokedex_be/scripts/: seed_pokemon.py
