[project]
name = "pokedex-be"
version = "0.1.0"
description = "API REST da Pokedex com FastAPI e MongoDB"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "motor>=3.6.0",
    "pydantic-settings>=2.6.0",
    "uvicorn[standard]>=0.30.0",
]

[tool.uv]
dev-dependencies = []
